# aegis

./: .gitignore  404.html  Cargo.toml  README.md  index.html  print.html  searcher-c2a407aa.js  searchindex-5acf0017.js  searchindex-d985e5a0.js
.github/workflows/: deploy-docs.yml
advanced/: architecture.html  index.html  native_extensions.html
aegis-docs/: aegis-highlight.js  book.toml
aegis-docs/src/: README.md  SUMMARY.md
aegis-docs/src/advanced/: README.md  architecture.md  native_extensions.md
aegis-docs/src/basics/: README.md  comments.md  control_flow.md  style_guide.md  typing.md  variables.md
aegis-docs/src/cookbook/: README.md  files.md  network.md  system.md
aegis-docs/src/functions/: README.md  declaration.md  decorators.md  functional.md  lambdas.md
aegis-docs/src/getting_started/: README.md  apm.md  cheatsheet.md  hello_world.md  installation.md  repl.md
aegis-docs/src/modularity/: README.md  errors.md  imports.md  namespaces.md
aegis-docs/src/oop/: README.md  classes.md  composition.md  inheritance.md  interfaces.md  methods.md  properties.md
aegis-docs/src/stdlib/: README.md  data.md  fs.md  http.md  math.md  socket.md  system.md  test.md
aegis-docs/src/structures/: README.md  bytes.md  dictionaries.md  lists.md  ranges.md  strings.md
basics/: comments.html  control_flow.html  index.html  style_guide.html  typing.html  variables.html
benchmark/: fib.aeg  fib.py  fib.rs  result.txt  rpg_test.aeg  rpg_test.py
cookbook/: files.html  index.html  network.html  system.html
functions/: declaration.html  decorators.html  functional.html  index.html  lambdas.html
getting_started/: apm.html  cheatsheet.html  hello_world.html  index.html  installation.html  repl.html
modularity/: errors.html  imports.html  index.html  namespaces.html
oop/: classes.html  composition.html  index.html  inheritance.html  methods.html
src/: ast.rs  chunk.rs  compiler.rs  interpreter.rs  lib.rs  loader.rs  main.rs  opcode.rs  package_manager.rs  parser.rs
src/ast/: environment.rs  mod.rs  nodes.rs  value.rs
src/compiler/: lexer.rs  mod.rs  parser.rs
src/native/: core.rs  http.rs  io.rs  json.rs  math.rs  mod.rs  random.rs  socket.rs  system.rs  time.rs
src/vm/: compiler.rs  debug.rs  mod.rs
stdlib/: data.html  fs.html  http.html  index.html  math.aeg  math.html  socket.aeg  socket.html  system.aeg  system.html  test.aeg  test.html
structures/: dictionaries.html  index.html  lists.html  strings.html
tests/: demo_life.aeg  dict_list_insert.aeg  github.aeg  logical.aeg  test_bitwise.aeg  test_bytes.aeg  test_crash.aeg  test_destruct.aeg  test_error.aeg  test_foreach.aeg  test_input.json  test_interface.aeg  test_math.aeg  test_multilines.aeg  test_namespace_intra.aeg  test_null_coalescing.aeg  test_oop.aeg  test_oop_new_syntax.aeg  test_oop_v0.3.0.aeg  test_prop.aeg  test_shebang.aeg  test_socket.aeg  test_string.aeg  test_super.aeg  test_switch.aeg  test_write.aeg  unit_test_demo.aeg
