[package]
name = "aegis"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json", "default-tls", "multipart"] }
libloading = "0.8"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
zip = "0.6"
dirs = "5.0"
walkdir = "2.3"
rust-embed = "8.2"

[lib]
name = "aegis_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "aegis"
path = "src/main.rs"

[profile.release]
opt-level = 3       # Optimisation maximale
lto = "fat"         # Link Time Optimization (fusionne le code entre les modules)
codegen-units = 1   # Compile tout en un seul bloc (plus lent à compiler, plus rapide à l'exécution)
panic = "abort"     # Retire le code de "unwind" en cas de panique (allège le binaire)
strip = true        # Retire les symboles de debug
